crates/biome_cli/tests/snapshots/main_cases_overrides_max_file_size/overrides_files_max_size_option_pass_format.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format test.js
```

## `biome.json`

```json
{
  "files": {
    "maxSize": 1024
  },
  "overrides": [
    {
      "includes": ["test.js"],
      "files": { "maxSize": 1024 }
    }
  ]
}
```

## `test.js`

```js
statement();

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
